--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/metro-runtime": "~5.0.4",
+    "@react-native-async-storage/async-storage": "2.1.2",
+    "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
+    "expo-device": "~7.1.4",
+    "expo-notifications": "~0.31.1",
     "expo-status-bar": "~2.2.3",
+    "mqtt": "^5.13.0",
     "react": "19.0.0",
-    "react-native": "0.79.2"
+    "react-dom": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-web": "^0.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
