--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.11.0",
     "expo": "~53.0.9",
+    "expo-dev-client": "~5.1.8",
     "expo-device": "~7.1.4",
     "expo-notifications": "~0.31.1",
     "expo-status-bar": "~2.2.3",
