--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@expo/metro-runtime": "~5.0.4",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-picker/picker": "^2.11.0",
+    "date-fns": "^4.1.0",
     "expo": "~53.0.9",
     "expo-dev-client": "~5.1.8",
     "expo-device": "~7.1.4",
